syntax = "proto3";

package com.shiki.proto;

option java_package = "com.shiki.proto";
option java_outer_classname = "PersonProto";
option java_multiple_files = true;

service PersonService {
    rpc GetRealNameByUsername (MyRequest) returns (MyResponse) {
    }

    rpc GetStudentByAge (MyRequestStream) returns (stream MyResponseStream) {
    }

    rpc GetMyResponseStream (stream MyRequest) returns (MyResponseList) {
    }
    rpc BiTalk (stream MyRequest) returns (stream MyResponse) {
    }
}

message MyRequest {
    string username = 1;
}

message MyResponse {
    string realname = 2;
}

message MyRequestStream {
    int32 age = 1;
}

message MyResponseStream {
    string username = 1;
    int32 age = 2;
    string city = 3;
}

message MyResponseList {
    repeated MyRequestStream myRequestStream = 1;
}